api improvements, fixes to scc opt formulation

--- a/minimdo/polynomialsjl.ipynb
+++ b/minimdo/polynomialsjl.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 134,
    "id": "334adbd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-11T22:09:31.285000-04:00",
-     "iopub.status.busy": "2022-07-11T22:09:30.132000-04:00",
-     "iopub.status.idle": "2022-07-11T22:10:17.568000-04:00",
-     "shell.execute_reply": "2022-07-11T22:10:17.404000-04:00"
+     "iopub.execute_input": "2022-07-12T19:39:51.395000-04:00",
+     "iopub.status.busy": "2022-07-12T19:39:51.395000-04:00",
+     "iopub.status.idle": "2022-07-12T19:39:52.218000-04:00",
+     "shell.execute_reply": "2022-07-12T19:39:52.218000-04:00"
     },
     "tags": []
    },
@@ -19,7 +19,16 @@
     "using HomotopyContinuation\n",
     "using Plots\n",
     "using Distributions\n",
-    "using Pandas"
+    "using Pandas\n",
+    "using LinearAlgebra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca303ca6-c3da-4b79-8da0-7c6baef91786",
+   "metadata": {},
+   "source": [
+    "## Allisons problem"
    ]
   },
   {
@@ -51,38 +60,6 @@
     "b = [2; 2.5; 3]\n",
     "w = [1.3; 1.5; 1.2]\n",
     "a1e = 0.2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "fe078650-ca15-4051-a99a-182d53b5034b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-04T12:17:16.085000-04:00",
-     "iopub.status.busy": "2022-05-04T12:17:16.085000-04:00",
-     "iopub.status.idle": "2022-05-04T12:17:16.086000-04:00",
-     "shell.execute_reply": "2022-05-04T12:17:16.086000-04:00"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$$ 1.69*x1^2 + 2.25*x2^2 + 1.44*x3^2 + (-0.2 + a1)^2 $$"
-      ],
-      "text/plain": [
-       "1.69*x1^2 + 2.25*x2^2 + 1.44*x3^2 + (-0.2 + a1)^2"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f"
    ]
   },
   {
@@ -122,6 +99,38 @@
     "f = (a1-a1e)^2+([x1^2 x2^2 x3^2]*w.^2)[1];\n",
     "vars = [x1, x2, x3, a1, a2, a3]\n",
     "h = [h1, h2, h3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "fe078650-ca15-4051-a99a-182d53b5034b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-04T12:17:16.085000-04:00",
+     "iopub.status.busy": "2022-05-04T12:17:16.085000-04:00",
+     "iopub.status.idle": "2022-05-04T12:17:16.086000-04:00",
+     "shell.execute_reply": "2022-05-04T12:17:16.086000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ 1.69*x1^2 + 2.25*x2^2 + 1.44*x3^2 + (-0.2 + a1)^2 $$"
+      ],
+      "text/plain": [
+       "1.69*x1^2 + 2.25*x2^2 + 1.44*x3^2 + (-0.2 + a1)^2"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
    ]
   },
   {
@@ -433,76 +442,186 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff491e89-bd9f-45fc-88f0-2ea49647ddef",
+   "metadata": {},
+   "source": [
+    "## Synthetic problem"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 352,
    "id": "ad566a33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-11T22:16:34.815000-04:00",
-     "iopub.status.busy": "2022-07-11T22:16:34.815000-04:00",
-     "iopub.status.idle": "2022-07-11T22:16:35.191000-04:00",
-     "shell.execute_reply": "2022-07-11T22:16:35.190000-04:00"
+     "iopub.execute_input": "2022-07-12T20:44:56.422000-04:00",
+     "iopub.status.busy": "2022-07-12T20:44:56.422000-04:00",
+     "iopub.status.idle": "2022-07-12T20:44:56.435000-04:00",
+     "shell.execute_reply": "2022-07-12T20:44:56.435000-04:00"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "@var x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12, x_13, x_14, x_15, x_16, x_17, x_18, x_19, x_20, x_21, x_22, x_23\n",
-    "@var λ[1:20];\n",
-    "h0=-0.5*x_1*x_21 - 0.9;\n",
-    "h1=0.8*x_10*x_13 + 0.2*x_17 + 0.5;\n",
-    "h2=0.7*x_1*x_8 - 1.0*x_15*x_19 - 0.9;\n",
-    "h3=0.7*x_12*x_15*x_17 + 0.1*x_14 - 0.4;\n",
-    "h4=-0.9*x_10*x_3 - 0.8*x_16 + 0.3;\n",
-    "h5=-0.2*x_15*x_7*x_8 + 1.0*x_2 + 1.0;\n",
-    "h6=0.4*x_11*x_5*x_8 - 0.2;\n",
-    "h7=-0.7*x_15*x_20 + 0.4;\n",
-    "h8=0.8*x_16*x_18 + 0.9*x_17*x_19 - 0.3;\n",
-    "h9=-0.4*x_16*x_3 + 0.2;\n",
-    "h10=-0.5*x_14*x_4 + 0.2*x_17*x_18*x_9 - 0.8*x_23 + 0.7;\n",
-    "h11=-0.1*x_0*x_3 - 0.3*x_17*x_9 - 0.7*x_20*x_23 + 0.6;\n",
-    "h12=-0.2*x_13*x_9 - 0.6*x_14*x_2 - 0.8;\n",
-    "h13=-0.6*x_1 + 0.3*x_18*x_9 + 0.9;\n",
-    "h14=0.3*x_22*x_5*x_8 + 0.9;\n",
-    "h15=0.9 - 0.1*x_6;\n",
-    "h16=-0.1*x_11*x_13 + 0.2;\n",
-    "h17=-0.1*x_10*x_15*x_7 + 0.5*x_8 + 0.1;\n",
-    "h18=0.5*x_18*x_5 + 0.4*x_23 + 0.9;\n",
-    "h19=-0.8*x_12*x_23 + 0.5;\n",
-    "vars=[x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12, x_13, x_14, x_15, x_16, x_17, x_18, x_19, x_20, x_21, x_22, x_23]\n",
-    "dfdx=[0, 0, 0, x_3, 0, 0, 0, 0, x_8, 0, 0, 0, 0, 0, 0, 0, 0, x_17, 0, 0, 0, 0, 0, x_23]\n",
-    "h=[h0, h1, h2, h3, h4, h5, h6, h7, h8, h9, h10, h11, h12, h13, h14, h15, h16, h17, h18, h19];"
+    "@var x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12, x_13, x_14\n",
+    "@var λ[1:10];\n",
+    "h0=0.6*x_12*x_6 + 0.8*x_3*x_7 + 0.2*x_4 + 0.5;\n",
+    "h1=0.5*x_1*x_13*x_9 - 0.9*x_10*x_12 - 0.6*x_14 + 0.7;\n",
+    "h2=0.3*x_11*x_12 + 0.2*x_2*x_3*x_5 - 0.8*x_4*x_8 - 0.2;\n",
+    "h3=0.4*x_1*x_14*x_7 + 0.3*x_11*x_8 + 0.4;\n",
+    "h4=0.1*x_14*x_4 + 0.4*x_6*x_7 - 0.4;\n",
+    "h5=-0.3*x_14*x_6*x_7 + 0.1*x_3*x_5 - 0.4;\n",
+    "h6=0.8*x_13*x_9 - 0.2*x_14*x_3 - 0.5;\n",
+    "h7=0.2*x_2 - 0.8;\n",
+    "h8=0.8*x_0*x_5 - 0.3*x_12*x_2 - 0.7*x_9 - 0.1;\n",
+    "h9=-0.5*x_1*x_11*x_8 - 0.9;\n",
+    "vars=[x_0, x_1, x_2, x_3, x_4, x_5, x_6, x_7, x_8, x_9, x_10, x_11, x_12, x_13, x_14]\n",
+    "dfdx=[0, 0, 0, 0, 0, 0, 0, 0, 2x_8-2, 2x_9-2, 0, 2x_11-2, 0, 2x_13-2, 2x_14-2]\n",
+    "h=[h0, h1, h2, h3, h4, h5, h6, h7, h8, h9, x_8-1, x_9-1,x_11-1, x_13-1,x_14-1];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 353,
+   "id": "c81f1cc5-1ba3-484b-8897-4724a87ad8d9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:44:56.902000-04:00",
+     "iopub.status.busy": "2022-07-12T20:44:56.902000-04:00",
+     "iopub.status.idle": "2022-07-12T20:44:56.902000-04:00",
+     "shell.execute_reply": "2022-07-12T20:44:56.902000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#differentiate((x_8-1)^2+(x_10-1)^2+(x_12-1)^2, vars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "id": "1f21b059-636c-4ebb-b511-383ab613d7d0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:44:59.106000-04:00",
+     "iopub.status.busy": "2022-07-12T20:44:59.106000-04:00",
+     "iopub.status.idle": "2022-07-12T20:44:59.106000-04:00",
+     "shell.execute_reply": "2022-07-12T20:44:59.106000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "J = jacobian(System(h));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "id": "8ff44c65-b291-4db2-8a9c-13236041d667",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:44:59.570000-04:00",
+     "iopub.status.busy": "2022-07-12T20:44:59.570000-04:00",
+     "iopub.status.idle": "2022-07-12T20:44:59.570000-04:00",
+     "shell.execute_reply": "2022-07-12T20:44:59.570000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#Jval = round.(to_number.(subs(J.+eps(Float64), vars=>sol)),digits=15)\n",
+    "#b = evaluate(dfdx,vars=>sol);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "id": "ac6c18c7-8fb8-4870-8f35-2230994a5463",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:44:59.797000-04:00",
+     "iopub.status.busy": "2022-07-12T20:44:59.797000-04:00",
+     "iopub.status.idle": "2022-07-12T20:44:59.797000-04:00",
+     "shell.execute_reply": "2022-07-12T20:44:59.797000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# A2 = Jval[:,2:end].-Jval[:,1]*l0[1]\n",
+    "# l2 = nullspace(A2)*[1 1]' \n",
+    "# A3 = A2[:,2:end].-A2[:,1]*l2[1]\n",
+    "# l3 = nullspace(A3) \n",
+    "# A4 = A3[:,2:end].-A3[:,1]*l3[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "id": "bd7dd5f3-c73f-42aa-b418-f72476be38a7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:44:59.962000-04:00",
+     "iopub.status.busy": "2022-07-12T20:44:59.962000-04:00",
+     "iopub.status.idle": "2022-07-12T20:44:59.962000-04:00",
+     "shell.execute_reply": "2022-07-12T20:44:59.962000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#l0 = nullspace(Jval)*[1 1 1]' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "id": "3118d8dd-fb4a-478b-8479-96f525da9f7c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:45:00.131000-04:00",
+     "iopub.status.busy": "2022-07-12T20:45:00.131000-04:00",
+     "iopub.status.idle": "2022-07-12T20:45:00.131000-04:00",
+     "shell.execute_reply": "2022-07-12T20:45:00.131000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#[b + Jval'*λ; subs(h, vars=>sol)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
    "id": "b8356e16-e5db-4e7f-bf76-2da6c4ebefa6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-11T22:16:35.390000-04:00",
-     "iopub.status.busy": "2022-07-11T22:16:35.389000-04:00",
-     "iopub.status.idle": "2022-07-11T22:16:35.592000-04:00",
-     "shell.execute_reply": "2022-07-11T22:16:35.591000-04:00"
+     "iopub.execute_input": "2022-07-12T20:42:14.804000-04:00",
+     "iopub.status.busy": "2022-07-12T20:42:14.804000-04:00",
+     "iopub.status.idle": "2022-07-12T20:42:14.813000-04:00",
+     "shell.execute_reply": "2022-07-12T20:42:14.804000-04:00"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "J = differentiate(h, vars);\n",
-    "kkt = [dfdx - J'*λ; h];"
+    "kkt = [dfdx + J'*λ; h];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 349,
    "id": "dac9c9e4-a1c0-459e-b873-84cceaee57fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-11T22:16:44.448000-04:00",
-     "iopub.status.busy": "2022-07-11T22:16:44.447000-04:00",
-     "iopub.status.idle": "2022-07-11T22:16:44.703000-04:00",
-     "shell.execute_reply": "2022-07-11T22:16:44.703000-04:00"
+     "iopub.execute_input": "2022-07-12T20:42:25.894000-04:00",
+     "iopub.status.busy": "2022-07-12T20:42:25.894000-04:00",
+     "iopub.status.idle": "2022-07-12T20:42:25.902000-04:00",
+     "shell.execute_reply": "2022-07-12T20:42:25.902000-04:00"
     },
     "tags": []
    },
@@ -513,34 +632,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 359,
+   "id": "8bf4df5a-7de0-401d-994e-fb3ac9b4ba86",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:45:03.175000-04:00",
+     "iopub.status.busy": "2022-07-12T20:45:03.175000-04:00",
+     "iopub.status.idle": "2022-07-12T20:45:03.181000-04:00",
+     "shell.execute_reply": "2022-07-12T20:45:03.175000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "Solv = System(h, variables = vars);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
    "id": "ed45b2a6-43f9-4488-9831-cb3a42fee1f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-11T22:17:03.271000-04:00",
-     "iopub.status.busy": "2022-07-11T22:17:03.271000-04:00"
+     "iopub.execute_input": "2022-07-12T20:45:06.794000-04:00",
+     "iopub.status.busy": "2022-07-12T20:45:06.794000-04:00",
+     "iopub.status.idle": "2022-07-12T20:45:15.754000-04:00",
+     "shell.execute_reply": "2022-07-12T20:45:15.754000-04:00"
     },
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mComputing mixed cells... 3 \t Time: 12:36:07\u001b[39m\n",
-      "\u001b[34m  mixed_volume:  6\u001b[39m"
-     ]
+     "data": {
+      "text/plain": [
+       "Result with 2 solutions\n",
+       "=======================\n",
+       "• 2 paths tracked\n",
+       "• 2 non-singular solutions (2 real)\n",
+       "• random_seed: 0xd19a26b6\n",
+       "• start_system: :polyhedral\n"
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = solve(Opt)"
+    "res = solve(Solv) #16 hours for 45 variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 361,
    "id": "cc3c861b-3edd-406b-b20f-c17c194dedb2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:45:18.803000-04:00",
+     "iopub.status.busy": "2022-07-12T20:45:18.803000-04:00",
+     "iopub.status.idle": "2022-07-12T20:45:18.803000-04:00",
+     "shell.execute_reply": "2022-07-12T20:45:18.803000-04:00"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "real_sols = real_solutions(res);"
@@ -548,43 +702,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "f5d160e0-5130-49d9-aff8-e995ac943230",
+   "execution_count": 363,
+   "id": "8721e59d-94c2-473a-9aaa-e08e649b6ee2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-04-18T15:37:24.116000-04:00",
-     "iopub.status.busy": "2022-04-18T15:37:24.116000-04:00",
-     "iopub.status.idle": "2022-04-18T15:37:24.118000-04:00",
-     "shell.execute_reply": "2022-04-18T15:37:24.118000-04:00"
+     "iopub.execute_input": "2022-07-12T20:45:26.534000-04:00",
+     "iopub.status.busy": "2022-07-12T20:45:26.534000-04:00",
+     "iopub.status.idle": "2022-07-12T20:45:26.682000-04:00",
+     "shell.execute_reply": "2022-07-12T20:45:26.682000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Vector{Float64}}:\n",
+       " [9.044275498572112, -1.8, 4.0, 1.5, 5.919614960128627, 1.7068591866023533, -0.49361527546164685, 0.9722222222222221, 1.0, 1.0, -0.09235334150723525, 1.0, 9.624869813933593, 1.0, 1.0]\n",
+       " [-2.9482493690130473, -1.8, 4.0, 1.5, 2.2153056747920084, 3.5590138292706626, 0.4589213979106265, 0.9722222222222221, 1.0, 1.0, 0.11601405579294957, 1.0, -7.661906850970627, 1.0, 1.0]"
+      ]
+     },
+     "execution_count": 363,
+     "metadata": {},
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "real_sols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1d2e43d2-ad66-484e-b870-f8566d6df275",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T19:01:38.374000-04:00",
+     "iopub.status.busy": "2022-07-12T19:01:38.374000-04:00",
+     "iopub.status.idle": "2022-07-12T19:01:38.375000-04:00",
+     "shell.execute_reply": "2022-07-12T19:01:38.375000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sol = real_sols[1];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "eb6039d9-04f1-45b3-b277-48fb94cb2416",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T20:26:56.635000-04:00",
+     "iopub.status.busy": "2022-07-12T20:26:56.635000-04:00",
+     "iopub.status.idle": "2022-07-12T20:26:56.638000-04:00",
+     "shell.execute_reply": "2022-07-12T20:26:56.638000-04:00"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "13-element Vector{Float64}:\n",
-       " -7.14496195261011\n",
-       "  0.2791438898153426\n",
-       " 29.62989894048818\n",
-       "  0.01792564307651001\n",
-       " 30.11729937328096\n",
-       " -0.2785476176509625\n",
-       "  0.1\n",
-       " 13.190141001828461\n",
-       "  0.02387443812696063\n",
-       "  0.03307350709849108\n",
-       "  2.0217120243801827\n",
-       "  0.1\n",
-       "  0.1"
+       "  1.1584362139917694\n",
+       "  1.0\n",
+       " -3.0000000000000004\n",
+       "  1.0\n",
+       "  1.0\n",
+       "  0.03703703703703702\n",
+       " -1.3333333333333335\n",
+       " -1.8662551440329218\n",
+       " -0.07792207792207792\n",
+       " -1.0\n",
+       " -1.5538188277087035\n",
+       " -4.277777777777778\n",
+       " -2.851851851851851"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "real_sols[5]"
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "06f36915-88c0-469b-b160-b2abee92259f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T17:17:38.984000-04:00",
+     "iopub.status.busy": "2022-07-12T17:17:38.984000-04:00",
+     "iopub.status.idle": "2022-07-12T17:17:39.214000-04:00",
+     "shell.execute_reply": "2022-07-12T17:17:39.213000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum((sol[2]-1)^2+(sol[4]-1)^2+(sol[5]-1)^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f5d160e0-5130-49d9-aff8-e995ac943230",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-12T17:15:00.526000-04:00",
+     "iopub.status.busy": "2022-07-12T17:15:00.526000-04:00",
+     "iopub.status.idle": "2022-07-12T17:15:00.724000-04:00",
+     "shell.execute_reply": "2022-07-12T17:15:00.723000-04:00"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Vector{Float64}}:\n",
+       " [1.1584362139917694, 1.0, -3.0000000000000004, 1.0, 1.0, 0.03703703703703702, -1.3333333333333335, -1.866255144032922, -0.07792207792207792, -1.0, -1.5538188277087035, -4.277777777777778, -2.851851851851851]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objs = [(idx, sum([elt[idx-9]^2 for idx in [11,12,13,14,15,17,18,19]]), valid[idx]) for (idx,elt) in enumerate(real_sols[0])]"
    ]
   },
   {
