validation code for smallest block

--- a/minimdo/satellite/sat_thesis.ipynb
+++ b/minimdo/satellite/sat_thesis.ipynb
@@ -2,28 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "be29e181-532c-4cab-964d-c4acae654188",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:05.654493Z",
-     "iopub.status.busy": "2022-07-15T13:52:05.654493Z",
-     "iopub.status.idle": "2022-07-15T13:52:07.607048Z",
-     "shell.execute_reply": "2022-07-15T13:52:07.607048Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:05.654493Z"
+     "iopub.execute_input": "2022-07-25T02:09:50.199340Z",
+     "iopub.status.busy": "2022-07-25T02:09:50.199340Z",
+     "iopub.status.idle": "2022-07-25T02:09:50.233509Z",
+     "shell.execute_reply": "2022-07-25T02:09:50.232845Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:50.199340Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/johan/miniconda3/envs/pyoptsparse/lib/python3.9/site-packages/pyoptsparse/pyOpt_MPI.py:68: UserWarning: mpi4py could not be imported. mpi4py is required to use the parallel gradient analysis and parallel objective analysis for non-gradient based optimizers. Continuing using a dummy MPI module from pyOptSparse.\n",
-      "  warnings.warn(warn)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from compute import Var, Par\n",
     "from datastructures.api import Model, adda, addf, addsolver, edges_no_param, evalexpr, OPT, addineq, setsolvefor, addobj\n",
@@ -39,7 +30,7 @@
     "from collections import OrderedDict\n",
     "from datastructures.graphutils import (namefromsympy, namefromid, flat_graph_formulation, Node, COMP, VAR, SOLVER,\n",
     "merge_edges, all_varnodes, all_variables, all_edges, sources, copy_dicts)\n",
-    "from datastructures.operators import sort_scc, reorder_merge_solve, reformulate\n",
+    "from datastructures.operators import sort_scc, reorder_merge_solve, reformulate, invert_edges\n",
     "from datastructures.execution import Component\n",
     "from datastructures.workflow import order_from_tree, get_f, mdao_workflow, default_solver_options\n",
     "from datastructures.workflow_mdao import mdao_workflow_with_args\n",
@@ -77,11 +68,11 @@
    "id": "f1c212a7-9963-4b07-a6e9-7f0ea1217b52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:07.607048Z",
-     "iopub.status.busy": "2022-07-15T13:52:07.607048Z",
-     "iopub.status.idle": "2022-07-15T13:52:07.623463Z",
-     "shell.execute_reply": "2022-07-15T13:52:07.622461Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:07.607048Z"
+     "iopub.execute_input": "2022-07-25T02:09:27.850543Z",
+     "iopub.status.busy": "2022-07-25T02:09:27.850041Z",
+     "iopub.status.idle": "2022-07-25T02:09:27.864019Z",
+     "shell.execute_reply": "2022-07-25T02:09:27.863551Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:27.850543Z"
     },
     "tags": []
    },
@@ -116,11 +107,11 @@
    "id": "c3d73208-2030-40c0-b4fb-c06eaf97a423",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:07.624461Z",
-     "iopub.status.busy": "2022-07-15T13:52:07.624461Z",
-     "iopub.status.idle": "2022-07-15T13:52:07.639515Z",
-     "shell.execute_reply": "2022-07-15T13:52:07.638561Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:07.624461Z"
+     "iopub.execute_input": "2022-07-25T02:09:27.865765Z",
+     "iopub.status.busy": "2022-07-25T02:09:27.865026Z",
+     "iopub.status.idle": "2022-07-25T02:09:27.879512Z",
+     "shell.execute_reply": "2022-07-25T02:09:27.878922Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:27.865765Z"
     },
     "tags": []
    },
@@ -145,11 +136,11 @@
    "id": "cfe79c9c-ccea-4219-b15e-086023c02b96",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:07.640528Z",
-     "iopub.status.busy": "2022-07-15T13:52:07.640528Z",
-     "iopub.status.idle": "2022-07-15T13:52:07.655397Z",
-     "shell.execute_reply": "2022-07-15T13:52:07.654525Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:07.640528Z"
+     "iopub.execute_input": "2022-07-25T02:09:27.880529Z",
+     "iopub.status.busy": "2022-07-25T02:09:27.880529Z",
+     "iopub.status.idle": "2022-07-25T02:09:27.894866Z",
+     "shell.execute_reply": "2022-07-25T02:09:27.893969Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:27.880529Z"
     },
     "tags": []
    },
@@ -164,11 +155,11 @@
    "id": "66dc9e13-a363-46d9-a9d8-0c40a9410eac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:07.724848Z",
-     "iopub.status.busy": "2022-07-15T13:52:07.724848Z",
-     "iopub.status.idle": "2022-07-15T13:52:08.002282Z",
-     "shell.execute_reply": "2022-07-15T13:52:08.002098Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:07.724848Z"
+     "iopub.execute_input": "2022-07-25T02:09:27.896876Z",
+     "iopub.status.busy": "2022-07-25T02:09:27.896876Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.408802Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.408244Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:27.896876Z"
     },
     "tags": []
    },
@@ -198,11 +189,11 @@
    "id": "441cc243-69d4-4299-b64f-19e89c363694",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:08.545282Z",
-     "iopub.status.busy": "2022-07-15T13:52:08.545282Z",
-     "iopub.status.idle": "2022-07-15T13:52:08.563385Z",
-     "shell.execute_reply": "2022-07-15T13:52:08.562360Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:08.545282Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.414741Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.413741Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.424868Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.423920Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.414741Z"
     },
     "tags": []
    },
@@ -217,11 +208,11 @@
    "id": "72ede195-4fe3-4d48-9740-e7657f94f92a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:08.773139Z",
-     "iopub.status.busy": "2022-07-15T13:52:08.773139Z",
-     "iopub.status.idle": "2022-07-15T13:52:08.875381Z",
-     "shell.execute_reply": "2022-07-15T13:52:08.874382Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:08.773139Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.427021Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.426520Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.595393Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.595123Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.427021Z"
     },
     "tags": []
    },
@@ -254,11 +245,11 @@
    "id": "d877b307-a9de-4109-931b-c1172a151495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:09.206092Z",
-     "iopub.status.busy": "2022-07-15T13:52:09.206092Z",
-     "iopub.status.idle": "2022-07-15T13:52:09.219494Z",
-     "shell.execute_reply": "2022-07-15T13:52:09.218337Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:09.206092Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.597430Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.596430Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.611464Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.610370Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.597430Z"
     },
     "tags": []
    },
@@ -273,11 +264,11 @@
    "id": "47b296c5-43f3-4575-aafc-16548576cd88",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:09.470337Z",
-     "iopub.status.busy": "2022-07-15T13:52:09.470337Z",
-     "iopub.status.idle": "2022-07-15T13:52:09.535340Z",
-     "shell.execute_reply": "2022-07-15T13:52:09.534338Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:09.470337Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.613473Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.613392Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.719736Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.719670Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.613473Z"
     },
     "tags": []
    },
@@ -297,11 +288,11 @@
    "id": "827027db-fe00-4f17-9c5b-fc323673b0c1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:09.973841Z",
-     "iopub.status.busy": "2022-07-15T13:52:09.973841Z",
-     "iopub.status.idle": "2022-07-15T13:52:09.984567Z",
-     "shell.execute_reply": "2022-07-15T13:52:09.984567Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:09.973841Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.722568Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.722350Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.735342Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.735248Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.722568Z"
     },
     "tags": []
    },
@@ -324,11 +315,11 @@
    "id": "56565f50-461e-44e2-b9cc-694b1cbfc609",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:10.358494Z",
-     "iopub.status.busy": "2022-07-15T13:52:10.358494Z",
-     "iopub.status.idle": "2022-07-15T13:52:10.375571Z",
-     "shell.execute_reply": "2022-07-15T13:52:10.374859Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:10.358494Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.737405Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.737405Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.751310Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.750806Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.737405Z"
     },
     "tags": []
    },
@@ -343,11 +334,11 @@
    "id": "38eecc0d-6b88-4d03-8221-457d361a5052",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:10.525943Z",
-     "iopub.status.busy": "2022-07-15T13:52:10.525943Z",
-     "iopub.status.idle": "2022-07-15T13:52:10.627138Z",
-     "shell.execute_reply": "2022-07-15T13:52:10.626995Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:10.525943Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.753657Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.752646Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.937102Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.936435Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.753657Z"
     },
     "tags": []
    },
@@ -370,11 +361,11 @@
    "id": "a6e2e8e7-9227-4e62-bc03-8d6801afc7a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:10.685313Z",
-     "iopub.status.busy": "2022-07-15T13:52:10.685313Z",
-     "iopub.status.idle": "2022-07-15T13:52:10.703312Z",
-     "shell.execute_reply": "2022-07-15T13:52:10.703312Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:10.685313Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.939115Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.939115Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.953272Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.952476Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.939115Z"
     },
     "tags": []
    },
@@ -397,11 +388,11 @@
    "id": "31b1491a-8558-4ee6-a3c1-0ea6f7aa0a19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:11.420310Z",
-     "iopub.status.busy": "2022-07-15T13:52:11.420310Z",
-     "iopub.status.idle": "2022-07-15T13:52:11.438618Z",
-     "shell.execute_reply": "2022-07-15T13:52:11.438618Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:11.420310Z"
+     "iopub.execute_input": "2022-07-25T02:09:28.954683Z",
+     "iopub.status.busy": "2022-07-25T02:09:28.954683Z",
+     "iopub.status.idle": "2022-07-25T02:09:28.998917Z",
+     "shell.execute_reply": "2022-07-25T02:09:28.998562Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:28.954683Z"
     },
     "tags": []
    },
@@ -419,11 +410,11 @@
    "id": "bcb17d1a-9dbf-4281-a65f-0d976ee914ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:11.628137Z",
-     "iopub.status.busy": "2022-07-15T13:52:11.628137Z",
-     "iopub.status.idle": "2022-07-15T13:52:11.674462Z",
-     "shell.execute_reply": "2022-07-15T13:52:11.674462Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:11.628137Z"
+     "iopub.execute_input": "2022-07-25T02:09:29.000938Z",
+     "iopub.status.busy": "2022-07-25T02:09:29.000938Z",
+     "iopub.status.idle": "2022-07-25T02:09:29.076362Z",
+     "shell.execute_reply": "2022-07-25T02:09:29.076270Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:29.000938Z"
     },
     "tags": []
    },
@@ -454,11 +445,11 @@
    "id": "268607d8-ba96-43ac-a703-c03a04df4c2c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:11.818543Z",
-     "iopub.status.busy": "2022-07-15T13:52:11.818543Z",
-     "iopub.status.idle": "2022-07-15T13:52:11.832444Z",
-     "shell.execute_reply": "2022-07-15T13:52:11.831528Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:11.818543Z"
+     "iopub.execute_input": "2022-07-25T02:09:29.204563Z",
+     "iopub.status.busy": "2022-07-25T02:09:29.204563Z",
+     "iopub.status.idle": "2022-07-25T02:09:29.217127Z",
+     "shell.execute_reply": "2022-07-25T02:09:29.216642Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:29.204563Z"
     },
     "tags": []
    },
@@ -484,11 +475,11 @@
    "id": "ab5f6150-c141-4d6f-9237-9ba7bc21336a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:12.828997Z",
-     "iopub.status.busy": "2022-07-15T13:52:12.828997Z",
-     "iopub.status.idle": "2022-07-15T13:52:12.847012Z",
-     "shell.execute_reply": "2022-07-15T13:52:12.846010Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:12.828997Z"
+     "iopub.execute_input": "2022-07-25T02:09:30.752896Z",
+     "iopub.status.busy": "2022-07-25T02:09:30.752896Z",
+     "iopub.status.idle": "2022-07-25T02:09:30.769960Z",
+     "shell.execute_reply": "2022-07-25T02:09:30.768956Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:30.752896Z"
     },
     "tags": []
    },
@@ -503,11 +494,11 @@
    "id": "36319b2c-b387-4bd7-8833-c8bb838a42a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:13.029147Z",
-     "iopub.status.busy": "2022-07-15T13:52:13.028227Z",
-     "iopub.status.idle": "2022-07-15T13:52:13.050191Z",
-     "shell.execute_reply": "2022-07-15T13:52:13.049191Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:13.029147Z"
+     "iopub.execute_input": "2022-07-25T02:09:31.050419Z",
+     "iopub.status.busy": "2022-07-25T02:09:31.050419Z",
+     "iopub.status.idle": "2022-07-25T02:09:31.063924Z",
+     "shell.execute_reply": "2022-07-25T02:09:31.063757Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:31.050419Z"
     },
     "tags": []
    },
@@ -523,11 +514,11 @@
    "id": "235ea58f-2d31-41af-954f-bc24b1fb1f21",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:13.203423Z",
-     "iopub.status.busy": "2022-07-15T13:52:13.202414Z",
-     "iopub.status.idle": "2022-07-15T13:52:13.455291Z",
-     "shell.execute_reply": "2022-07-15T13:52:13.455291Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:13.203423Z"
+     "iopub.execute_input": "2022-07-25T02:09:31.302283Z",
+     "iopub.status.busy": "2022-07-25T02:09:31.301399Z",
+     "iopub.status.idle": "2022-07-25T02:09:31.764366Z",
+     "shell.execute_reply": "2022-07-25T02:09:31.763474Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:31.302283Z"
     },
     "tags": []
    },
@@ -594,15 +585,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "5b55702f-6efe-4d30-96fa-56caee479c4e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-15T13:52:34.947321Z",
-     "iopub.status.busy": "2022-07-15T13:52:34.947321Z",
-     "iopub.status.idle": "2022-07-15T13:52:34.958093Z",
-     "shell.execute_reply": "2022-07-15T13:52:34.957597Z",
-     "shell.execute_reply.started": "2022-07-15T13:52:34.947321Z"
+     "iopub.execute_input": "2022-07-25T02:09:36.529164Z",
+     "iopub.status.busy": "2022-07-25T02:09:36.529164Z",
+     "iopub.status.idle": "2022-07-25T02:09:36.538120Z",
+     "shell.execute_reply": "2022-07-25T02:09:36.538120Z",
+     "shell.execute_reply.started": "2022-07-25T02:09:36.529164Z"
     },
     "tags": []
    },
@@ -611,6 +602,54 @@
     "edges, tree = model.generate_formulation()\n",
     "edges_nopar = edges_no_param(model, edges) # filter out variables that are parameters\n",
     "outset_initial = {comp: var[0] for comp,var in edges[1].items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "90a13ed4-c799-4bb5-8da3-ace70e65dbdc",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-25T02:10:05.335774Z",
+     "iopub.status.busy": "2022-07-25T02:10:05.335774Z",
+     "iopub.status.idle": "2022-07-25T02:10:05.340108Z",
+     "shell.execute_reply": "2022-07-25T02:10:05.339809Z",
+     "shell.execute_reply.started": "2022-07-25T02:10:05.335774Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "incidence,_,_ = invert_edges(edges[0], edges[1], None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "55e7a117-6253-497b-8834-56e84d339270",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-25T02:10:07.863131Z",
+     "iopub.status.busy": "2022-07-25T02:10:07.863131Z",
+     "iopub.status.idle": "2022-07-25T02:10:07.878359Z",
+     "shell.execute_reply": "2022-07-25T02:10:07.878302Z",
+     "shell.execute_reply.started": "2022-07-25T02:10:07.863131Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.038461538461538"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([len(val) for val in incidence.values()])"
    ]
   },
   {
@@ -2740,9 +2779,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('pyoptsparse': conda)",
+   "display_name": "Python [conda env:minimdo]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-minimdo-py"
   },
   "language_info": {
    "codemirror_mode": {
