--- a/minimdo/pearl/pearl_opt.ipynb
+++ b/minimdo/pearl/pearl_opt.ipynb
@@ -2,28 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "8091570d-d595-4bdc-bedc-8984c18cdff3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-24T23:31:31.955955Z",
-     "iopub.status.busy": "2022-07-24T23:31:31.954941Z",
-     "iopub.status.idle": "2022-07-24T23:31:34.959523Z",
-     "shell.execute_reply": "2022-07-24T23:31:34.958407Z",
-     "shell.execute_reply.started": "2022-07-24T23:31:31.955955Z"
+     "iopub.execute_input": "2022-07-25T02:01:31.428725Z",
+     "iopub.status.busy": "2022-07-25T02:01:31.428725Z",
+     "iopub.status.idle": "2022-07-25T02:01:31.446129Z",
+     "shell.execute_reply": "2022-07-25T02:01:31.445191Z",
+     "shell.execute_reply.started": "2022-07-25T02:01:31.428725Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/johan/miniconda3/envs/pyoptsparse/lib/python3.9/site-packages/pyoptsparse/pyOpt_MPI.py:68: UserWarning: mpi4py could not be imported. mpi4py is required to use the parallel gradient analysis and parallel objective analysis for non-gradient based optimizers. Continuing using a dummy MPI module from pyOptSparse.\n",
-      "  warnings.warn(warn)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pearl.pearl_initial_formulation import *\n",
     "from datastructures.graphutils import flatten_tree\n",
@@ -31,26 +22,27 @@
     "copy_dicts, setsolvefor)\n",
     "from datastructures.graphutils import all_variables, all_edges\n",
     "from datastructures.tearing import dir_graph, min_arc_set_assign\n",
-    "from datastructures.operators import reformulate\n",
+    "from datastructures.operators import reformulate, invert_edges\n",
     "from datastructures.rendering import render_incidence\n",
     "from datastructures.runpipeline import (model_to_problem, order_from_tree, \n",
     "    default_solver_options, mdao_workflow)\n",
     "from datastructures.transformations import transform_components\n",
     "from copy import deepcopy\n",
-    "import openmdao.api as om"
+    "import openmdao.api as om\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "bcba5875",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-24T23:31:34.960552Z",
-     "iopub.status.busy": "2022-07-24T23:31:34.960552Z",
-     "iopub.status.idle": "2022-07-24T23:31:34.974524Z",
-     "shell.execute_reply": "2022-07-24T23:31:34.974244Z",
-     "shell.execute_reply.started": "2022-07-24T23:31:34.960552Z"
+     "iopub.execute_input": "2022-07-25T01:59:33.653037Z",
+     "iopub.status.busy": "2022-07-25T01:59:33.652025Z",
+     "iopub.status.idle": "2022-07-25T01:59:33.659659Z",
+     "shell.execute_reply": "2022-07-25T01:59:33.659659Z",
+     "shell.execute_reply.started": "2022-07-25T01:59:33.653037Z"
     },
     "tags": []
    },
@@ -61,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "45c49d34-17ee-4bab-bc0b-10f27503fcd0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-24T23:31:34.977393Z",
-     "iopub.status.busy": "2022-07-24T23:31:34.977393Z",
-     "iopub.status.idle": "2022-07-24T23:31:34.989594Z",
-     "shell.execute_reply": "2022-07-24T23:31:34.989594Z",
-     "shell.execute_reply.started": "2022-07-24T23:31:34.977393Z"
+     "iopub.execute_input": "2022-07-25T01:59:34.136215Z",
+     "iopub.status.busy": "2022-07-25T01:59:34.135215Z",
+     "iopub.status.idle": "2022-07-25T01:59:34.142895Z",
+     "shell.execute_reply": "2022-07-25T01:59:34.141884Z",
+     "shell.execute_reply.started": "2022-07-25T01:59:34.136215Z"
     },
     "tags": []
    },
@@ -83,15 +75,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
+   "id": "713d8148-2d77-4599-9144-90db64515d9e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-25T02:00:57.096141Z",
+     "iopub.status.busy": "2022-07-25T02:00:57.096141Z",
+     "iopub.status.idle": "2022-07-25T02:00:57.110268Z",
+     "shell.execute_reply": "2022-07-25T02:00:57.110268Z",
+     "shell.execute_reply.started": "2022-07-25T02:00:57.096141Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "incidence,_,_ = invert_edges(edges[0], edges[1], None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "76039619-4555-4852-9f7e-389ab3b87a3a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-25T02:05:17.385656Z",
+     "iopub.status.busy": "2022-07-25T02:05:17.384655Z",
+     "iopub.status.idle": "2022-07-25T02:05:17.391071Z",
+     "shell.execute_reply": "2022-07-25T02:05:17.390658Z",
+     "shell.execute_reply.started": "2022-07-25T02:05:17.385656Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(37, 45)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(incidence), len(all_variables(*edges_nopar))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9f775e4e-3a40-4a9c-b4d4-608a74452ac1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-07-25T02:07:10.800000Z",
+     "iopub.status.busy": "2022-07-25T02:07:10.799001Z",
+     "iopub.status.idle": "2022-07-25T02:07:10.810028Z",
+     "shell.execute_reply": "2022-07-25T02:07:10.809898Z",
+     "shell.execute_reply.started": "2022-07-25T02:07:10.800000Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.378378378378378"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([len(val) for val in incidence.values()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "7fe80d57-699b-4abb-941e-54695f31f4b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-24T23:31:34.991760Z",
-     "iopub.status.busy": "2022-07-24T23:31:34.991760Z",
-     "iopub.status.idle": "2022-07-24T23:31:35.005911Z",
-     "shell.execute_reply": "2022-07-24T23:31:35.005318Z",
-     "shell.execute_reply.started": "2022-07-24T23:31:34.991760Z"
+     "iopub.execute_input": "2022-07-25T01:59:34.939127Z",
+     "iopub.status.busy": "2022-07-25T01:59:34.938117Z",
+     "iopub.status.idle": "2022-07-25T01:59:34.953365Z",
+     "shell.execute_reply": "2022-07-25T01:59:34.953243Z",
+     "shell.execute_reply.started": "2022-07-25T01:59:34.939127Z"
     },
     "tags": []
    },
@@ -106,19 +177,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "4d3ae2cf-5396-4ce5-98aa-25985f335b74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-24T23:31:35.006931Z",
-     "iopub.status.busy": "2022-07-24T23:31:35.006931Z",
-     "iopub.status.idle": "2022-07-24T23:31:35.082203Z",
-     "shell.execute_reply": "2022-07-24T23:31:35.081993Z",
-     "shell.execute_reply.started": "2022-07-24T23:31:35.006931Z"
+     "iopub.execute_input": "2022-07-25T01:59:35.116871Z",
+     "iopub.status.busy": "2022-07-25T01:59:35.116871Z",
+     "iopub.status.idle": "2022-07-25T01:59:35.202446Z",
+     "shell.execute_reply": "2022-07-25T01:59:35.202446Z",
+     "shell.execute_reply.started": "2022-07-25T01:59:35.116871Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2023-02-25\n"
+     ]
+    }
+   ],
    "source": [
     "not_input = [r'\\omega_0', 'E_{move}', 'A_{33}', 'B_M', 'K_G', 'I', 'E_{recharge}', 'm_{struct}']\n",
     "not_output = ['D_f', 'D_d', 'D_s', 't_s', 't_f', 't_d', 'P_{comms}', 'R'] #R\n",
@@ -1484,9 +1564,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('pyoptsparse': conda)",
+   "display_name": "Python [conda env:minimdo]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-minimdo-py"
   },
   "language_info": {
    "codemirror_mode": {
